--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "lpl",
   "main": "index.tsx",
-  "scripts": {},
+  "scripts": {
+    "build": "webpack --env mode=production",
+    "start": "webpack serve --env mode=development"
+  },
   "license": "MIT",
   "dependencies": {
     "react": "^17.0.1",
@@ -11,13 +14,14 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
+    "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.5.0",
+    "npm-run-all": "^4.1.5",
     "webpack": "^5.8.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^4.2.0"
   }
 }
