--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "main": "index.tsx",
   "scripts": {
     "build": "webpack --env mode=production",
-    "start": "webpack serve --env mode=development"
+    "start": "run-p start:dev format:watch",
+    "start:dev": "webpack serve --env mode=development",
+    "format:watch": "onchange 'src/**/*.{ts,tsx}' -- prettier --write {{changed}}"
   },
   "license": "MIT",
   "dependencies": {
@@ -21,7 +23,10 @@
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.5.0",
     "npm-run-all": "^4.1.5",
+    "onchange": "^7.1.0",
+    "prettier": "^2.2.1",
     "webpack": "^5.8.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
