--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
     "prettier": "^2.2.1",
+    "ts-loader": "^8.0.11",
+    "typescript": "^4.1.2",
     "webpack": "^5.8.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
