--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-player": "^2.7.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
