--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "main": "index.tsx",
   "scripts": {
     "build": "webpack --env mode=production",
-    "start": "run-p start:dev format:watch",
-    "start:dev": "webpack serve --env mode=development",
-    "format:watch": "onchange 'src/**/*.{ts,tsx}' -- prettier --write {{changed}}"
+    "start": "run-p dev eslint format",
+    "dev": "webpack serve --env mode=development",
+    "eslint": "onchange 'src/**/*.{ts,tsx}' -- eslint src/**/*.{ts,tsx}",
+    "format": "onchange 'src/**/*.{ts,tsx}' -- prettier --write {{changed}}"
   },
   "license": "MIT",
   "dependencies": {
@@ -26,8 +27,14 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^4.5.0",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
