--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
   "compilerOptions": {
     "sourceMap": true,
     "noImplicitAny": true,
+    "strict": true,
     "module": "commonjs",
     "target": "es6",
-    "jsx": "react",
+    "jsx": "preserve",
     "esModuleInterop": true
   }
 }
