--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "noImplicitAny": true,
     "strict": true,
     "module": "commonjs",
-    "target": "es6",
-    "jsx": "preserve",
+    "target": "es5",
+    "jsx": "react",
     "esModuleInterop": true
   }
 }
