--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nanoid": "^3.1.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-player": "^2.7.0",
     "react-query": "^2.26.3",
     "styled-components": "^5.2.1"
