--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lpl",
   "main": "index.tsx",
   "scripts": {
+    "deploy": "npm run build && gh-pages -d build",
     "build": "webpack --env mode=production",
     "start": "run-p dev eslint format",
     "dev": "webpack serve --env mode=development",
@@ -38,6 +39,7 @@
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.0",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
